--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Привет мир</title>
 </head>
-<body>
+<body><a href="krossvordRU.html">Русский кроссворд</a>
     <h1>Привет мир</h1>
 </body>
 </html>
