--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Привет мир</title>
 </head>
 <body><a href="krossvordRU.html">Русский кроссворд</a>
+    <a href="krossvordEN.html">Английский кроссворд</a>
     <h1>Привет мир</h1>
 </body>
 </html>
