--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 <head>
     <title>Привет мир</title>
 </head>
-<body><a href="krossvordRU.html">Русский кроссворд</a>
+<body> 
+<h2>17 января 2026</h2>    
+    <p> открытый текст Апельсин - шифротекст сацьнвщю k=17 </p>
+    <p> открытый текст Абрикос - шифротекст ыьлгейм k=27 </p>
+    <p> ФХНЗКЧ - ПРИВЕТ k=5 </p>
+    <p> цщебф -   весна k=20 </p>
+   <p>открытый текст  Иналова - шифротекст тчйхшлй k=10 </p> 
+    
+    <a href="krossvordRU.html">Русский кроссворд</a>
     <a href="krossvordEN.html">Английский кроссворд</a>
-    <h1>Привет мир</h1>
+    <h1>Привет мир</h1> 
 </body>
 </html>
