--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     
     <a href="krossvordRU.html">Русский кроссворд</a>
     <a href="krossvordEN.html">Английский кроссворд</a>
-    <h1>Привет мир</h1> 
+
+<h2> дату сегодня , 2025</h2>
+<img src=“Icons/имя файла вашей картинки.png” alt=“Новый год”>
+Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<h2> 15 октября , 2025</h2>
+<p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
+</p>
+<h2> 1 сентября , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
+    
 </body>
 </html>
